# normals_HoughCNN

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  estimation_script.py  estimation_script_pretrained.py  estimation_script_trained.py  generate_training_set.py  houghCNN.cpp  houghCNN.h  main.cpp  pc_io.h  predict.lua  test.py  timeMeasure.cpp  timeMeasure.h  train.py
include/: c_houghCNN.pxd  houghCNN.h
models/: model_1s.py  model_3s.py  model_5s.py
python/: NormalEstimatorHoughCNN.cpp  NormalEstimatorHoughCNN.pyx  houghCNN.cxx  houghCNN.h  model_1s.py  model_3s.py  model_5s.py  setup.py
src/: CMakeLists.txt  NormalEstimatorHoughCNN.pyx  houghCNN.cxx
test/: cube_100k.xyz
